testsuite/tests/typecheck/should_fail/tcfail058.stderr

tcfail058.hs:6:7: error:
    • Expecting one more argument to ‘Array a’
      Expected a constraint, but ‘Array a’ has kind ‘* -> *’
    • In the type signature: f :: (Array a) => a -> b
